# Tooth_Mesh_Creator

./: CMakeLists.txt  README.md  main.cpp
header/: Bankhelper.h  Config.h  Matrix4.h  Misc.h  Mutex.h  Resources.h  SphereNode.h  SphereTree.h  Vec3.h  buildparams.h  test.h
output/: tooth.dae
resouce/: Config.cpp  Matrix4.cpp  SphereNode.cpp  SphereTree.cpp  Vec3.cpp
